2014-07-07: Fixed README (opps omitted mk-tools)

--- a/README
+++ b/README
@@ -38,7 +38,8 @@ Build Procedure goes as follows:
 command to run			These are just comments don't enter these
 ------------------------------	----------------------------------------- 
 su -c ./mk-setup-lfs		Setup and install build system
-su -c ./mk-lfs			Build toolchain and system
+su -c ./mk-tools		Build toolchain
+su -c ./mk-lfs			Build system
 
 Build at this point is complete.
 The following are some support scripts if you require them.
