--- a/README
+++ b/README
@@ -38,7 +38,9 @@ Build Procedure goes as follows:
 command to run			These are just comments don't enter these
 ------------------------------	----------------------------------------- 
 su -c ./mk-setup-lfs		Setup and install build system
-su -c ./mk-tools		Build toolchain
+change to lfs user and cd to /mnt/lfs/usr/src/Octothorpt
+./mk-tools			Build toolchain
+exit lfs usr
 su -c ./mk-lfs			Build system
 
 Build at this point is complete.
