Signed-off-by: baho-utot <baho-utot@columbus.rr.com>

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-Work in Process - Updateing to Version 8.2
+Work in Process - Updating to Version 8.2
 
 This build tracks linux from scratch version 8.2
 
