--- a/README
+++ b/README
@@ -67,28 +67,45 @@ mount /dev/sdxx /mnt/lfs	mount partition to work directory
 
 OK It's time to fish or cut bait:
 
-	Install build system
+#
+#	Install build system
+#
 login as root user
 cd to directory where you placed and extracted the build system.
 ./setup.sh			installs build system to
 				/mnt/lfs/usr/src/Octothorpe
 				and creates lfs user
-
-	Get the source tarballs
+#
+#	Get the source tarballs
+#
 login as lfs user
 cd /mnt/lfs/usr/src/Octothorpe
 fetch.sh			Gets source tarballs
 
-	Build tool chain
+There are three ways to build the tool chain
+pick one
+
+#
+#	1.	Build tool chain one go with tests
+#
+./tools.sh
+#
+#	2.	Build tool chain in steps with tests
+#
 ./builder.sh tools-glibc	Build to glibc
 ./tools-glibc-test.sh	Do the test/check result
 ./builder tools-gcc-pass-2	Build to gcc
 ./tools-gcc-pass-2-test.sh	Do the test/check result
 ./builder.sh tools-rpm	Build the rest of the toolchain
-				and a static rpm
 ./tools-post.sh		Fixup rpm for the base build
-
-	Build LFS system
+#
+#	3.	Build toolchain w/o testing
+#
+./builder.sh tools-rpm	Build toolchain
+./tools-post.sh		Fixup rpm for the base build
+#
+#	Build LFS system
+#
 login as root
 cd /mnt/lfs/usr/src/Octothorpe
 chroot.sh			mount kernel filesystems and chroot
