--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 Work in Process	- Updating to Version 8.2
-			- tool chain build works
-			- base building is WIP
+				- tool chain build works
+				- base building is WIP
 
 This build tracks linux from scratch version 8.2
 
@@ -73,47 +73,28 @@ OK It's time to fish or cut bait:
 login as root user
 cd to directory where you placed and extracted the build system.
 ./setup.sh			installs build system to
-				/mnt/lfs/usr/src/Octothorpe
-				and creates lfs user
+					/mnt/lfs/usr/src/Octothorpe
+					and creates lfs user
 #
 #	Get the source tarballs
 #
 login as lfs user
 cd /mnt/lfs/usr/src/Octothorpe
 fetch.sh			Gets source tarballs
-
-There are three ways to build the tool chain
-pick one
-
 #
-#	1.	Build tool chain one go with tests
+#Build tool chain one go with tests
 #
 ./tools.sh
-#
-#	2.	Build tool chain in steps with tests
-#
-./builder.sh tools-glibc	Build to glibc
-./tools-glibc-test.sh	Do the test/check result
-./builder tools-gcc-pass-2	Build to gcc
-./tools-gcc-pass-2-test.sh	Do the test/check result
-./builder.sh tools-rpm	Build the rest of the toolchain
-./tools-post.sh		Fixup rpm for the base build
-#
-#	3.	Build toolchain w/o testing
-#
-./builder.sh tools-rpm	Build toolchain
-./tools-post.sh		Fixup rpm for the base build
 #
 #	Build LFS system
 #
 login as root
 cd /mnt/lfs/usr/src/Octothorpe
-chroot.sh			mount kernel filesystems and chroot
+chroot.sh				mount kernel filesystems and chroot
 cd /usr/src/Octothorpe	change to build directory
-./base-prepare.sh		setup for base build
 
 ****	WIP ****
-./builder.sh linux		build LFS base system
+./lfs.sh				Build system
 ****	WIP ****
 
 The last step will remove the toolchain and use vim to make
